[Editorial] defence -> defense

--- a/src/epub/text/book-5.xhtml
+++ b/src/epub/text/book-5.xhtml
@@ -114,7 +114,7 @@
 						<span>And thus defeated all his wicked arts.</span>
 					</p>
 				</blockquote>
-				<p>Phavorinus, in his Universal History, says that Aristotle was the first person who ever composed a speech to be delivered in his own defence in a court of justice, and that he did so on the occasion of this prosecution, and said that at Athens:</p>
+				<p>Phavorinus, in his Universal History, says that Aristotle was the first person who ever composed a speech to be delivered in his own defense in a court of justice, and that he did so on the occasion of this prosecution, and said that at Athens:</p>
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Pears upon pear-trees grow; on fig-trees, figs.</span>
