[Editorial] proofread through book 3

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -28,7 +28,7 @@
 				</li>
 				<li id="note-7" epub:type="endnote">
 					<p>This is the account given by Virgil⁠—<a href="book-1.xhtml#noteref-7" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem" xml:lang="la">
+					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span class="i1">Spretæ Ciconum quo munere matres</span><br />
 							<span>Inter sacra Deûm nocturnique orgia Bacchi,</span><br />
@@ -37,7 +37,7 @@
  <cite><i epub:type="se:name.publication.poem">Georgics</i> <span epub:type="z3998:roman">iv</span> 520.</span>
 					</blockquote>
 					<p>Which Dryden translates⁠—</p>
-					<blockquote epub:type="z3998:poem">
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>The Thracian matrons who the youth accus’d,</span><br />
 							<span>Of love disdain’d and marriage rites refus’d;</span><br />
@@ -98,7 +98,7 @@
 				</li>
 				<li id="note-24" epub:type="endnote">
 					<p>This is exactly the character that Horace gives of him: <a href="book-2.xhtml#noteref-24" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem" xml:lang="la">
+					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Omnis Aristippum decuit color et status et res;</span><br />
 							<span>Tentantem majora, fere præsentibus æequum.</span>
@@ -151,7 +151,7 @@
 				</li>
 				<li id="note-37" epub:type="endnote">
 					<p>This is a quotation from some lost play of Euripides, slightly altered, the line, as printed in the Variorum Edition, volume <span epub:type="z3998:roman">vii</span>, <abbr>Mc.</abbr> Tragoediis <span epub:type="z3998:roman">cxxx</span> is⁠—<a href="book-4.xhtml#noteref-37" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem" xml:lang="grc">
+					<blockquote epub:type="z3998:verse" xml:lang="grc">
 						<p>
 							<span>ἀκόλαστα πάντα γίνεται, δούλων τέκνα.</span>
 						</p>
@@ -171,27 +171,27 @@
 				</li>
 				<li id="note-42" epub:type="endnote">
 					<p>I doubt if the wit of these parodies will be appreciated by the modern reader. The lines of Homer, which they are intended to parody, are: <a href="book-4.xhtml#noteref-42" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem" xml:lang="grc">
+					<blockquote epub:type="z3998:verse" xml:lang="grc">
 						<p>
 							<span>Ὦ μάκαρ Ατρεΐδη, μοιρηγενὲς, ὀλβιοδαίμων</span>
 						</p>
  <cite><i epub:type="se:name.publication.poem">Iliad</i> 3, 182.</cite>
 					</blockquote>
-					<blockquote epub:type="z3998:poem" xml:lang="grc">
+					<blockquote epub:type="z3998:verse" xml:lang="grc">
 						<p>
 							<span>ἠέ συ Πηλεΐδη, πάντων ἐκπαγλότατ᾿ ἀνδρῶν</span>
 						</p>
  <cite><i epub:type="se:name.publication.poem">Iliad</i> <span epub:type="z3998:roman">v</span> 146.</cite>
 					</blockquote>
 					<p>The first of which is translated by Pope: </p>
-					<blockquote epub:type="z3998:poem">
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>Oh, blest Atrides, born of prosperous fate,</span><br />
 							<span>Successful monarch of a mighty state!</span>
 						</p>
 					</blockquote>
 					<p>The Greek parody in the text is: </p>
-					<blockquote epub:type="z3998:poem" xml:lang="grc">
+					<blockquote epub:type="z3998:verse" xml:lang="grc">
 						<p>
 							<span>Ὦ πέπον Ἀρχύτα, ψαλληγενὲς, ὀλβιότυφε</span><br />
 							<span>Τῆς ὑπάτης ἔριδος πάντων ἐμπειρότατ᾿ ἀνδρῶν.</span>
@@ -260,7 +260,7 @@
 				</li>
 				<li id="note-63" epub:type="endnote">
 					<p>There is a pun intended here; as Diogenes proposed Didymus a fate somewhat similar to that of the beaver. <a href="book-6.xhtml#noteref-63" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem" xml:lang="la">
+					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Cupiens evadere damno</span><br />
 							<span>Testiculorum.</span>
@@ -317,14 +317,14 @@
 				</li>
 				<li id="note-80" epub:type="endnote">
 					<p>This a parody on two lines in the <i epub:type="se:name.publication.play">Antiope</i> of Euripides:</p>
-					<blockquote epub:type="z3998:poem" xml:lang="grc">
+					<blockquote epub:type="z3998:verse" xml:lang="grc">
 						<p>
 							<span>Γνώμῃ γὰρ ἀνδρὸς εὖ μὲν οἰκοῦνται πόλεις,</span><br />
 							<span>Εὖ δ᾿ οἶκος εἴς τ᾿ αὖ πόλεμον ἰσχύει μέγα.</span>
 						</p>
 					</blockquote>
 					<p>Which may be translated: </p>
-					<blockquote epub:type="z3998:poem">
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>Wisdom it is which regulates both cities,</span><br />
 							<span>And private citizens, and makes their lot</span><br />
@@ -342,21 +342,21 @@
 				</li>
 				<li id="note-83" epub:type="endnote">
 					<p>The Greek in the text is:</p>
-					<blockquote epub:type="z3998:poem" xml:lang="grc">
+					<blockquote epub:type="z3998:verse" xml:lang="grc">
 						<p>
 							<span>Κεῖνος μὲν πανάριστος ὃς εὖ εἰπόντι πίθηται,</span><br />
 							<span>Ἐσθλὸς δ᾿ αὖ κἀκεῖνος ὃς αὐτὸς πάντα νοήσῃ.</span>
 						</p>
 					</blockquote>
 					<p>The lines in Hesiod are: </p>
-					<blockquote epub:type="z3998:poem" xml:lang="grc">
+					<blockquote epub:type="z3998:verse" xml:lang="grc">
 						<p>
 							<span>Κεῖνος μὲν πανάριστος ὃς αὐτὸς πάντα νοήσῃ</span><br />
 							<span>Ἐσθλὸς δ᾿ αὖ κἀκεῖνος ὃς εὖ εἰπόντι πίθηται.</span>
 						</p>
  <cite><i epub:type="se:name.publication.poem">Opera et Dies</i> 293.</cite>
 					</blockquote>
-					<blockquote epub:type="z3998:poem">
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>That man is best, whose unassisted wit</span><br />
 							<span>Perceives at once what in each case is fit.</span><br />
@@ -398,7 +398,7 @@
 				</li>
 				<li id="note-94" epub:type="endnote">
 					<p>This is similar to Virgil’s description. <a href="book-7.xhtml#noteref-94" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem" xml:lang="la">
+					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Quinque tenent cœlum zonæ, quarum una corusco</span><br />
 							<span>Semper Sole rubens, et torrida semper ab igni:</span><br />
@@ -411,7 +411,7 @@
  <cite><i epub:type="se:name.publication.poem">Georgics</i> <span epub:type="z3998:roman">I</span> 233.</cite>
 					</blockquote>
 					<p>There is no part of Dryden’s translation superior to that of this passage.</p>
-					<blockquote epub:type="z3998:poem">
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>Five girdles bind the skies; the torrid zone</span><br />
 							<span>Glows with the passing and repassing sun;</span><br />
@@ -445,7 +445,7 @@
 				</li>
 				<li id="note-101" epub:type="endnote">
 					<p>This is referring to the Stoic doctrine ridiculed by Horace: <a href="book-7.xhtml#noteref-101" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem" xml:lang="la">
+					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Si dives qui sapiens est,</span><br />
 							<span>Et sutor bonus, et solus formosus, et est Rex</span><br />
@@ -454,7 +454,7 @@
  <cite>Horace, <i epub:type="se:name.publication.poem">Satires</i> <span epub:type="z3998:roman">i</span> 130.</span>
 					</blockquote>
 					<p>Which may be translated: </p>
-					<blockquote epub:type="z3998:poem">
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>If every man is rich who’s wise,</span><br />
 							<span>A cobbler too beyond all price;</span><br />
@@ -471,7 +471,7 @@
 				</li>
 				<li id="note-104" epub:type="endnote">
 					<p>This is a quotation from Homer, <i epub:type="se:name.publication.poem">Odyssey</i> <span epub:type="z3998:roman">x</span>. 495. Pope’s Version, 586. The Greek here is <i xml:lang="grc">οἷος πέπνυται</i>. The line in Homer stands: <a href="book-7.xhtml#noteref-104" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem" xml:lang="grc">
+					<blockquote epub:type="z3998:verse" xml:lang="grc">
 						<p>
 							<span>οἵῳ πέπνυσθαι⁠—sc: πόρε περσεφόνεια.</span>
 						</p>
@@ -488,7 +488,7 @@
 				</li>
 				<li id="note-108" epub:type="endnote">
 					<p>This resembles the account which Ovid puts into the mouth of Pythagoras, in the last book of his <i epub:type="se:name.publication.poem">Metamorphoses</i>, where he makes him say: <a href="book-8.xhtml#noteref-108" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem" xml:lang="la">
+					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Morte carent animæ, semperque priore relicta</span><br />
 							<span>Sede, novis domibus habitant vivuntque receptæ;</span><br />
@@ -500,7 +500,7 @@
 						</p>
 					</blockquote>
 					<p>Which may be translated: </p>
-					<blockquote epub:type="z3998:poem">
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>Death has no pow’r th’ immortal soul to slay;</span><br />
 							<span>That, when its present body turns to clay,</span><br />
@@ -526,7 +526,7 @@
 				</li>
 				<li id="note-112" epub:type="endnote">
 					<p>This doctrine is alluded to doubtfully by Virgil, <i epub:type="se:name.publication.poem">Georgics</i> <span epub:type="z3998:roman">i</span>247. <a href="book-8.xhtml#noteref-112" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem" xml:lang="la">
+					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Illic, ut perhibent, aut intempesta silet nox</span><br />
 							<span>Semper, et obductâ densantur nocte tenebræ;</span><br />
@@ -536,7 +536,7 @@
 						</p>
 					</blockquote>
 					<p>Thus translated by Dryden, <span epub:type="z3998:roman">l</span> 338: </p>
-					<blockquote epub:type="z3998:poem">
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>There, as they say, perpetual night is found,</span><br />
 							<span>In silence brooding o’er th’ unhappy ground.</span><br />
@@ -561,7 +561,7 @@
 				</li>
 				<li id="note-117" epub:type="endnote">
 					<p>This story is mentioned by Horace: <a href="book-8.xhtml#noteref-117" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem" xml:lang="la">
+					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span class="i2">Siculique poetæ,</span><br />
 							<span>Narrabo interitum; deus immortalis haberi,</span><br />
@@ -609,7 +609,7 @@
 				</li>
 				<li id="note-130" epub:type="endnote">
 					<p>This is thus embodied by Lucretius: <a href="book-9.xhtml#noteref-130" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem" xml:lang="la">
+					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Nam nihil e nihilo, in nihilum nîl posse reverti.</span>
 						</p>
@@ -629,7 +629,7 @@
 				</li>
 				<li id="note-135" epub:type="endnote">
 					<p>There is too remarkable a similarity in this to Campbell’s lines: <a href="book-9.xhtml#noteref-135" epub:type="backlink">↩</a></p>
-					<blockquote epub:type="z3998:poem">
+					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>’Tis distance lends enchantment to the view,</span><br />
 							<span>And robes the mountains in their azure hue:</span>
