misc markup / compliance cleanup

--- a/src/epub/text/book-2.xhtml
+++ b/src/epub/text/book-2.xhtml
@@ -110,18 +110,20 @@
 				<p>And Callias, in his <i epub:type="se:name.publication.play">Captives</i>, says:</p>
 				<blockquote epub:type="z3998:drama">
 					<table>
-						<tr>
-							<td epub:type="z3998:persona">
-								<abbr class="name">A.</abbr>
-							</td>
-							<td>Are you so proud, giving yourself such airs?</td>
-						</tr>
-						<tr>
-							<td epub:type="z3998:persona">
-								<abbr class="name">B.</abbr>
-							</td>
-							<td>And well I may, for Socrates is the cause.</td>
-						</tr>
+						<tbody>
+							<tr>
+								<td epub:type="z3998:persona">
+									<abbr class="name">A.</abbr>
+								</td>
+								<td>Are you so proud, giving yourself such airs?</td>
+							</tr>
+							<tr>
+								<td epub:type="z3998:persona">
+									<abbr class="name">B.</abbr>
+								</td>
+								<td>And well I may, for Socrates is the cause.</td>
+							</tr>
+						</tbody>
 					</table>
 				</blockquote>
 				<p>And Aristophanes says, in his <i epub:type="se:name.publication.play">Clouds</i>:</p>
