--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -178,7 +178,7 @@
 					<p>
 						<span>
 							<i>B.</i>
-							<span class="half-line">He’s a civil God,</span>
+							<span class="i2">He’s a civil God,</span>
 							<br/>
 						</span>
 						<span>If he likes eating with such dirty fellows.</span>
@@ -187,7 +187,7 @@
 				<p>And again, in the same play he says:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
-						<div class="verse indent11">They eat</div>
+						<span id="i2">They eat</span>
 						<br/>
 						<span>Nothing but herbs and vegetables, and drink</span>
 						<br/>
@@ -468,7 +468,7 @@
 				<p>But afterwards Empedocles abolished the assembly of a thousand, and established a council in which the magistrates were to hold office for three years, on such a footing that it should consist not only of rich men, but of those who were favorers of the interests of the people. Timaeus, however, in his first and second book (for he often mentions him), says that he appeared to entertain opinions adverse to a republic. And, as far as his poetry goes, anyone may see that he was arrogant and self-satisfied. Accordingly, he says:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
-						<div class="verse indent9">Hail to ye,</div>
+						<span class="i2">Hail to ye,</span>
 						<br/>
 						<span>I, an immortal God, no longer mortal,</span>
 						<br/>
