[Editorial] one's self -> oneself

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -682,7 +682,7 @@
 					<p>The Thesmophoria was a festival in honor of Ceres, celebrated in various parts of Greece; and only by married women; though girls might perform some of the ceremonies. Herodotus says, that it was introduced into Greece from Egypt, by the daughters of Danaus. The Attic Thesmophoria lasted probably three days, and began on the eleventh day of the month Pyanession; the first day was called <i xml:lang="grc">ἄνοδος</i>, or <i xml:lang="grc">κάθοδος</i>, from the women going in procession to Eleusis; the second <i xml:lang="grc">νηστεία</i>, or fasting; the third was called <i xml:lang="grc">καλλιγένεια</i>, as on that day Ceres was invoked under that name, and it was the day of merriment of the festival. <a href="book-9.xhtml#noteref-128" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-129" epub:type="endnote">
-					<p>Namely, reasoning well, expressing one’s self well, and acting well. <a href="book-9.xhtml#noteref-129" epub:type="backlink">↩</a></p>
+					<p>Namely, reasoning well, expressing oneself well, and acting well. <a href="book-9.xhtml#noteref-129" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-130" epub:type="endnote">
 					<p>This is thus embodied by Lucretius: <a href="book-9.xhtml#noteref-130" epub:type="backlink">↩</a></p>
