--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,18 +12,18 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">The Lives and Opinions of Eminent Philosophers</i><br/>
-			was published in YEAR by<br/>
+			was written in the third century <abbr class="era">A.D.</abbr> by<br/>
 			<a href="https://en.wikipedia.org/wiki/Diogenes_La%C3%ABrtius">Diogenes Laërtius</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			<a href="https://sniggle.net/TPL/">David M. Gross</a>,<br/>
 			and is based on a transcription produced in 2018 by<br/>
 			<b class="name">Ted Garvin</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/57342">Project Gutenberg</a><br/>
-			and on digital scans available at the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			and on digital scans available at<br/>
+			<a href="https://www.google.com/books/edition/The_lives_and_opinions_of_eminent_philos/1sEIAAAAQAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
 			a painting completed in YEAR by<br/>
