[Editorial] proofread through book 8

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -118,12 +118,11 @@
 						</li>
 						<li>
 							<a href="text/book-3.xhtml" epub:type="z3998:roman">III</a>
-						</li>
-						<li>
-							<a href="text/book-3.xhtml#book-3">Plato</a>
-						</li>
-						<li>
-							<a href="text/book-3.xhtml#book-3">Archytas to Dionysius, Greeting</a>
+							<ol>
+								<li>
+									<a href="text/book-3.xhtml#part-3-1">Plato</a>
+								</li>
+							</ol>
 						</li>
 						<li>
 							<a href="text/book-4.xhtml" epub:type="z3998:roman">IV</a>
@@ -145,9 +144,6 @@
 								</li>
 								<li>
 									<a href="text/book-4.xhtml#part-4-6">Arcesilaus</a>
-								</li>
-								<li>
-									<a href="text/book-4.xhtml#part-4-6">Arcesilaus to Thaumasias</a>
 								</li>
 								<li>
 									<a href="text/book-4.xhtml#part-4-7">Bion</a>
@@ -225,12 +221,6 @@
 									<a href="text/book-7.xhtml#part-7-1">Zeno</a>
 								</li>
 								<li>
-									<a href="text/book-7.xhtml#part-7-1">King Antigonus to Zeno the Philosopher, Greeting</a>
-								</li>
-								<li>
-									<a href="text/book-7.xhtml#part-7-1">Zeno to King Antigonus, Greeting</a>
-								</li>
-								<li>
 									<a href="text/book-7.xhtml#part-7-2">Ariston</a>
 								</li>
 								<li>
@@ -257,9 +247,6 @@
 									<a href="text/book-8.xhtml#part-8-1">Pythagoras</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#part-8-1">Pythagoras to Anaximenes</a>
-								</li>
-								<li>
 									<a href="text/book-8.xhtml#part-8-2">Empedocles</a>
 								</li>
 								<li>
@@ -267,12 +254,6 @@
 								</li>
 								<li>
 									<a href="text/book-8.xhtml#part-8-4">Archytas</a>
-								</li>
-								<li>
-									<a href="text/book-8.xhtml#part-8-4">Archytas to Plato, Greeting</a>
-								</li>
-								<li>
-									<a href="text/book-8.xhtml#part-8-4">Plato to Archytas, Greeting</a>
 								</li>
 								<li>
 									<a href="text/book-8.xhtml#part-8-5">Alcmaeon</a>
@@ -347,10 +328,10 @@
 						<li>
 							<a href="text/book-10.xhtml#book-10">Epicurus to Menoeceus, Greeting</a>
 						</li>
-						<li>
-							<a href="text/endnotes.xhtml">Endnotes</a>
-						</li>
 					</ol>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml">Endnotes</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -370,10 +351,16 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
+					<a href="text/preface.xhtml" epub:type="frontmatter preface">Preface</a>
+				</li>
+				<li>
 					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
-					<a href="text/book-1.xhtml" epub:type="bodymatter z3998:fiction">The Lives and Opinions of Eminent Philosophers</a>
+					<a href="text/book-1.xhtml" epub:type="bodymatter z3998:non-fiction">The Lives and Opinions of Eminent Philosophers</a>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
