--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -13,7 +13,9 @@
 			</header>
 			<p><i epub:type="se:name.publication.book">The Lives and Opinions of Eminent Philosophers</i><br/>
 			was written in the third century <abbr class="era">A.D.</abbr> by<br/>
-			<a href="https://en.wikipedia.org/wiki/Diogenes_La%C3%ABrtius">Diogenes Laërtius</a>.</p>
+			<a href="https://en.wikipedia.org/wiki/Diogenes_La%C3%ABrtius">Diogenes Laërtius</a>.
+			and translated from Greek into English by
+			<a href="https://en.wikipedia.org/wiki/Charles_Duke_Yonge">Charles Duke Yonge</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
@@ -35,7 +37,7 @@
 			<p>The first edition of this ebook was released on<br/>
 			<b>January 1, 1900, 12:00 <abbr class="time eoc">a.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
-			<a href="https://standardebooks.org/ebooks/diogenes-laertius/the-lives-and-opinions-of-eminent-philosophers">standardebooks.org/ebooks/diogenes-laertius/the-lives-and-opinions-of-eminent-philosophers</a>.</p>
+			<a href="https://standardebooks.org/ebooks/diogenes-laertius/the-lives-and-opinions-of-eminent-philosophers/c-d-yonge">standardebooks.org/ebooks/diogenes-laertius/the-lives-and-opinions-of-eminent-philosophers/c-d-yonge</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
 		</section>
 	</body>
