[Editorial] proofread through book 9

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -13,8 +13,8 @@
 			</header>
 			<p><i epub:type="se:name.publication.book">The Lives and Opinions of Eminent Philosophers</i><br/>
 			was written in the third century <abbr class="era">A.D.</abbr> by<br/>
-			<a href="https://en.wikipedia.org/wiki/Diogenes_La%C3%ABrtius">Diogenes Laërtius</a>.
-			and translated from Greek into English by
+			<a href="https://en.wikipedia.org/wiki/Diogenes_La%C3%ABrtius">Diogenes Laërtius</a><br/>
+			and translated from Greek into English by<br/>
 			<a href="https://en.wikipedia.org/wiki/Charles_Duke_Yonge">Charles Duke Yonge</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
