[Editorial] finish proofreading

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -276,9 +276,6 @@
 									<a href="text/book-9.xhtml#part-9-1">Heraclitus</a>
 								</li>
 								<li>
-									<a href="text/book-9.xhtml#part-9-1">Heraclitus, of Ephesus, to King Darius, the Son of Hystaspes, Greeting</a>
-								</li>
-								<li>
 									<a href="text/book-9.xhtml#part-9-2">Xenophanes</a>
 								</li>
 								<li>
@@ -300,7 +297,7 @@
 									<a href="text/book-9.xhtml#part-9-8">Protagoras</a>
 								</li>
 								<li>
-									<a href="text/book-9.xhtml#part-9-9">Diogenes, of Apollonia</a>
+									<a href="text/book-9.xhtml#part-9-9">Diogenes of Apollonia</a>
 								</li>
 								<li>
 									<a href="text/book-9.xhtml#part-9-10">Anaxarchus</a>
@@ -315,18 +312,11 @@
 						</li>
 						<li>
 							<a href="text/book-10.xhtml" epub:type="z3998:roman">X</a>
-						</li>
-						<li>
-							<a href="text/book-10.xhtml#book-10">Epicurus</a>
-						</li>
-						<li>
-							<a href="text/book-10.xhtml#book-10">Epicurus to Herodotus, Wishing He May Do Well</a>
-						</li>
-						<li>
-							<a href="text/book-10.xhtml#book-10">Epicurus to Pythocles, Wishing He May Do Well</a>
-						</li>
-						<li>
-							<a href="text/book-10.xhtml#book-10">Epicurus to Menoeceus, Greeting</a>
+							<ol>
+								<li>
+									<a href="text/book-10.xhtml#part-10-1">Epicurus</a>
+								</li>
+							</ol>
 						</li>
 					</ol>
 				</li>
